Power Effect Table Refactor
-update detail alert's method of displaying a psychic power's difficulty table
-change psychic power to utilize string resource items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,6 @@
     <string name = "zenData">Zen</string>
 
     <string name = "exitTitle">Save before exiting?</string>
+
+    <string name = "errorText">Error</string>
 </resources>
