Settings Menu Implementation
-implement settings option on main page
-implement changing to dark theme via options menu
-save user's previous dark mode setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,11 @@
     <string name = "inhuman">Inhuman</string>
     <string name = "zenData">Zen</string>
 
+    <string name = "settingsLabel">Settings</string>
+
+    <string name = "lightMode">Light Mode</string>
+    <string name = "darkMode">Dark Mode</string>
+
     <string name = "exitTitle">Save before exiting?</string>
 
     <string name = "errorText">Error</string>
