Bug Fix -fixed bug when looking at a piece of armor's details -fixed bug with Aptitude in a Field Advantage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
 
     <string name = "dpLabel">%1d DP</string>
     <string name = "weightLabelKG">%1d kg</string>
+    <string name = "weightDoubleKG">%.2f kg</string>
     <string name = "weightLabelTons">%1d tons</string>
     <string name = "distanceLabelM">%1d m</string>
     <string name = "distanceLabelKM">%1d km</string>
