Implement OutlinedDropdown -create a composable function for an outlined dropdown UI object -replace previous dropdowns for the Character page with this object -begin implementation of custom Secondary Characteristics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
 
     <string name="emptyItem"/>
 
+    <string name = "primeCharLabel">Characteristic</string>
+
     <string-array name = "primaryCharArray">
         <item>STR</item>
         <item>DEX</item>
@@ -41,6 +43,7 @@
     <string name = "nextLabel">Next</string>
     <string name = "returnLabel">Return</string>
     <string name = "confirmLabel">Confirm</string>
+    <string name = "createLabel">Create</string>
     <string name = "backLabel">Back</string>
     <string name = "cancelLabel">Cancel</string>
     <string name = "deleteLabel">Delete</string>
