Implement Editing Custom Characteristics -allow the user to change a custom characteristic's public state, field, and primary modifier -allow the user to delete a custom characteristic -add filename reference to custom characteristic item -fix crash where missing custom characteristic does not pass previous data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,6 @@
 
     <string name = "exitTitle">Save before exiting?</string>
 
+    <string name = "publicLabel">Public</string>
     <string name = "errorText">Error</string>
 </resources>
