Implement Level Audit and Reset -add menu features for SBL characters to reset and audit the current level -properly implement reset function for secondary characteristics -refactor how level change checks for legal levels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name = "lightMode">Light Mode</string>
     <string name = "darkMode">Dark Mode</string>
 
+    <string name = "clearLevelTitle">Reset this level?</string>
     <string name = "exitTitle">Save before exiting?</string>
 
     <string name = "publicLabel">Public</string>
